--- a/sample/package.json
+++ b/sample/package.json
@@ -8,6 +8,7 @@
       "aurelia-metadata": "github:aurelia/metadata@^0.8.0",
       "aurelia-templating": "github:aurelia/templating@^0.15.3",
       "font-awesome": "npm:font-awesome@^4.4.0",
+      "gooy/aurelia-markdown": "github:gooy/aurelia-markdown@^0.0.3",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "kendo-ui": "github:kendo-labs/bower-kendo-ui@2015.2.813",
       "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17",
