--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "aurelia-metadata": "github:aurelia/metadata@^0.8.0",
       "aurelia-templating": "github:aurelia/templating@^0.15.3",
       "kendo-ui": "github:kendo-labs/bower-kendo-ui@2015.2.813",
+      "showdown": "github:showdownjs/showdown@1.3.0",
       "telerik/kendo-ui-core": "github:telerik/kendo-ui-core@^2015.3.930"
     },
     "devDependencies": {
