--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
       "aurelia-binding": "github:aurelia/binding@^0.9.1",
       "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.17.0",
       "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.10.1",
-      "aurelia-logging": "github:aurelia/logging@^0.7.0",
+      "aurelia-logging": "github:aurelia/logging@^0.8.0",
       "aurelia-metadata": "github:aurelia/metadata@^0.8.0",
       "aurelia-templating": "github:aurelia/templating@^0.15.3",
+      "kendo": "bower:https://bower.telerik.com/bower-kendo-ui.git@^2015.2.813",
       "kendo-ui": "github:kendo-labs/bower-kendo-ui@2015.2.813",
       "showdown": "github:showdownjs/showdown@1.3.0",
       "telerik/kendo-ui-core": "github:telerik/kendo-ui-core@^2015.3.930"
@@ -60,6 +61,8 @@
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jspm": "^0.16.6",
+    "jspm-bower": "0.0.3",
+    "jspm-bower-endpoint": "git+https://github.com/cengageLucas/jspm-bower-endpoint.git",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.1.7",
