--- a/package.json
+++ b/package.json
@@ -25,15 +25,16 @@
       "lib": "dist/amd"
     },
     "dependencies": {
-      "aurelia-binding": "github:aurelia/binding@^0.10.2",
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.18.0",
-      "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.11.2",
-      "aurelia-logging": "github:aurelia/logging@^0.8.0",
-      "aurelia-metadata": "github:aurelia/metadata@^0.9.0",
-      "aurelia-templating": "github:aurelia/templating@^0.16.0",
-      "kendo-ui": "github:kendo-labs/bower-kendo-ui@2015.2.813",
-      "showdown": "github:showdownjs/showdown@1.3.0",
-      "telerik/kendo-ui-core": "github:telerik/kendo-ui-core@^2015.3.930"
+      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.1",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1",
+      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1",
+      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
+      "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
+      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
+      "kendo": "kendo:bower-kendo-ui@^2015.2.813",
+      "showdown": "github:showdownjs/showdown@1.3.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.22",
@@ -62,6 +63,7 @@
     "jspm": "^0.16.6",
     "jspm-bower": "0.0.3",
     "jspm-bower-endpoint": "git+https://github.com/cengageLucas/jspm-bower-endpoint.git",
+    "jspm-git": "^0.4.2",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.1.7",
