--- a/sample/package.json
+++ b/sample/package.json
@@ -1,14 +1,15 @@
 {
   "jspm": {
     "dependencies": {
-      "aurelia-binding": "github:aurelia/binding@^0.10.2",
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.18.0",
-      "aurelia-framework": "github:aurelia/framework@^0.17.0",
-      "aurelia-http-client": "github:aurelia/http-client@^0.12.0",
-      "aurelia-metadata": "github:aurelia/metadata@^0.9.0",
-      "aurelia-templating": "github:aurelia/templating@^0.16.0",
+      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.1",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1",
+      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1",
+      "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
+      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
+      "kendo": "kendo:bower-kendo-ui@^2015.2.813",
       "kendo-ui": "github:kendo-labs/bower-kendo-ui@2015.2.813",
       "showdownjs/showdown": "github:showdownjs/showdown@^1.3.0",
       "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17",
