--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
       "kendo": "kendo:bower-kendo-ui@^2015.2.813",
+      "kendo-ui": "kendo:bower-kendo-ui@^2015.2.813",
       "showdown": "github:showdownjs/showdown@1.3.0"
     },
     "devDependencies": {
