--- a/sample/package.json
+++ b/sample/package.json
@@ -9,10 +9,11 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
-      "kendo": "kendo:bower-kendo-ui@^2015.2.813",
-      "showdown": "github:showdownjs/showdown@1.3.0",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
+      "kendo": "kendo:bower-kendo-ui@^2015.2.813",
+      "kendo-ui": "kendo:bower-kendo-ui@^2015.2.813",
+      "showdown": "github:showdownjs/showdown@1.3.0",
       "showdownjs/showdown": "github:showdownjs/showdown@^1.3.0",
       "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17",
       "twbs/bootstrap": "github:twbs/bootstrap@3.3.5"
