--- a/package.json
+++ b/package.json
@@ -33,9 +33,8 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
-      "kendo": "kendo:bower-kendo-ui@^2015.2.813",
-      "kendo-ui": "kendo:bower-kendo-ui@^2015.2.813",
-      "showdown": "github:showdownjs/showdown@1.3.0"
+      "showdown": "github:showdownjs/showdown@1.3.0",
+      "kendo-ui": "github:kendo-labs/bower-kendo-ui"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.22",
@@ -62,9 +61,6 @@
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jspm": "^0.16.6",
-    "jspm-bower": "0.0.3",
-    "jspm-bower-endpoint": "git+https://github.com/cengageLucas/jspm-bower-endpoint.git",
-    "jspm-git": "^0.4.2",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.1.7",
