--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
+      "jquery": "github:components/jquery@^2.1.4",
       "showdown": "github:showdownjs/showdown@1.3.0"
     },
     "devDependencies": {
