--- a/package.json
+++ b/package.json
@@ -37,9 +37,12 @@
       "showdown": "github:showdownjs/showdown@1.3.0"
     },
     "devDependencies": {
+      "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1",
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
       "core-js": "npm:core-js@^1.2.6",
+      "kendo-ui": "kendo:bower-kendo-ui@^2015.2.813",
       "traceur": "github:jmcriffey/bower-traceur@0.0.91",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.91"
     }
@@ -61,6 +64,7 @@
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jspm": "^0.16.6",
+    "jspm-git": "^0.4.2",
     "karma": "^0.12.28",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-chrome-launcher": "^0.1.7",
