--- a/sample/package.json
+++ b/sample/package.json
@@ -9,6 +9,7 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
+      "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "font-awesome": "npm:font-awesome@^4.4.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "showdown": "github:showdownjs/showdown@1.3.0",
