--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "gulp-eslint": "^1.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
+    "gulp-typedoc": "^1.2.1",
+    "gulp-typedoc-extractor": "0.0.8",
     "gulp-yuidoc": "^0.1.2",
     "jasmine-core": "^2.1.3",
     "jspm": "^0.16.6",
