--- a/sample/package.json
+++ b/sample/package.json
@@ -10,12 +10,11 @@
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
-      "font-awesome": "npm:font-awesome@^4.4.0",
+      "font-awesome": "npm:font-awesome@^4.5.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "showdown": "github:showdownjs/showdown@1.3.0",
       "showdownjs/showdown": "github:showdownjs/showdown@^1.3.0",
-      "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17",
-      "twbs/bootstrap": "github:twbs/bootstrap@3.3.5"
+      "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.22",
