--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
+    "vinyl": "^1.1.0",
     "vinyl-paths": "^1.0.0",
     "yargs": "^2.1.1"
   },
