--- a/sample/package.json
+++ b/sample/package.json
@@ -11,10 +11,10 @@
       "aurelia-prism-plugin": "github:JeroenVinke/aurelia-prism-plugin@^1.0.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "css": "github:systemjs/plugin-css@0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
-      "showdown": "github:showdownjs/showdown@1.3.0",
-      "systemjs/plugin-css": "github:systemjs/plugin-css@^0.1.17"
+      "showdown": "github:showdownjs/showdown@1.3.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.22",
