--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
       "jquery": "github:components/jquery@^2.1.4",
-      "showdown": "github:showdownjs/showdown@1.3.0"
+      "showdown": "github:showdownjs/showdown@1.3.0",
+      "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1",
