--- a/sample/package.json
+++ b/sample/package.json
@@ -1,15 +1,19 @@
 {
   "jspm": {
     "dependencies": {
-      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.1",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1",
-      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1",
-      "aurelia-http-client": "npm:aurelia-http-client@^1.0.0-beta.1",
-      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
-      "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
-      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
+      "aurelia-binding": "npm:aurelia-binding@1.0.0-beta.1.0.3",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@1.0.0-beta.1",
+      "aurelia-dependency-injection": "npm:aurelia-dependency-injection@1.0.0-beta.1",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@1.0.0-beta.1",
+      "aurelia-framework": "npm:aurelia-framework@1.0.0-beta.1.0.6",
+      "aurelia-http-client": "npm:aurelia-http-client@1.0.0-beta.1",
+      "aurelia-loader": "npm:aurelia-loader@1.0.0-beta.1",
+      "aurelia-logging": "npm:aurelia-logging@1.0.0-beta.1",
+      "aurelia-metadata": "npm:aurelia-metadata@1.0.0-beta.1",
+      "aurelia-pal": "npm:aurelia-pal@1.0.0-beta.1.0.1",
+      "aurelia-templating": "npm:aurelia-templating@1.0.0-beta.1.0.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
+      "jquery": "github:components/jquery@2.1.4",
       "css": "github:systemjs/plugin-css@0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
       "json": "github:systemjs/plugin-json@^0.1.0",
