chore(all): linting on sample
https://github.com/aurelia-ui-toolkits/aurelia-kendoui-plugin/issues/176

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,9 @@
 build
-sample
+sample/images
+sample/jspm_packages
+sample/node_modules
+sample/styles
+sample/vendors
+sample/config.js
+sample/package.json
+sample/system.js
