--- a/package.json
+++ b/package.json
@@ -37,9 +37,7 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
-      "jquery": "github:components/jquery@^2.1.4",
-      "showdown": "github:showdownjs/showdown@1.3.0",
-      "text": "github:systemjs/plugin-text@^0.0.4"
+      "jquery": "github:components/jquery@^2.1.4"
     },
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1",
@@ -47,6 +45,7 @@
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
       "core-js": "npm:core-js@^1.2.6",
+      "text": "github:systemjs/plugin-text@^0.0.4",
       "kendo-ui": "kendo:bower-kendo-ui@^2015.2.813",
       "polymer/mutationobservers": "github:polymer/mutationobservers@^0.4.2",
       "traceur": "github:jmcriffey/bower-traceur@0.0.91",
