--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1",
-      "jquery": "github:components/jquery@^2.1.4"
+      "jquery": "components/jquery@^2.1.4"
     },
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1",
@@ -47,10 +47,10 @@
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
       "core-js": "npm:core-js@^1.2.6",
-      "polymer/mutationobservers": "github:polymer/mutationobservers@^0.4.2",
-      "text": "github:systemjs/plugin-text@^0.0.4",
-      "traceur": "github:jmcriffey/bower-traceur@0.0.91",
-      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.91"
+      "polymer/mutationobservers": "^0.4.2",
+      "text": "systemjs/plugin-text@^0.0.4",
+      "traceur": "jmcriffey/bower-traceur@0.0.91",
+      "traceur-runtime": "jmcriffey/bower-traceur-runtime@0.0.91"
     }
   },
   "devDependencies": {
