--- a/sample/package.json
+++ b/sample/package.json
@@ -15,10 +15,13 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "google/code-prettify": "github:google/code-prettify@master",
       "jquery": "github:components/jquery@2.1.4",
       "json": "github:systemjs/plugin-json@^0.1.0",
+      "prettify": "npm:prettify@^0.1.7",
       "prism": "github:PrismJS/prism@1.3.0",
       "showdown": "github:showdownjs/showdown@1.3.0",
+      "showdown-prettify": "npm:showdown-prettify@^1.0.2",
       "text": "github:systemjs/plugin-text@^0.0.4"
     },
     "devDependencies": {
