--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,12 @@ cache:
     - jspm_packages
 
 branches:
-  only: 
+  only:
     - master
 
 install:
   - npm install
-  - jspm config registries.github.auth JSPM_GITHUB_AUTH_TOKEN
+  - jspm config registries.github.auth $JSPM_GITHUB_AUTH_TOKEN
   - node_modules/.bin/jspm install
 
 before_script:
