--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
       "lib": "dist/amd"
     },
     "dependencies": {
+      "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.5",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1",
       "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1",
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
