--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.0.3",
-      "jquery": "components/jquery@^2.1.4"
+      "jquery": "components/jquery@^2.1.4",
+      "jquery.min": "components/jquery@^2.1.4"
     },
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1",
