--- a/package.json
+++ b/package.json
@@ -35,11 +35,10 @@
     },
     "dependencies": {
       "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.5",
-      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.0.2",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.0.1",
-      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.0.8",
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
+      "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.0.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.0.3",
       "jquery": "components/jquery@^2.1.4"
     },
