--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "babel-eslint": "^4.1.1",
     "babel-runtime": "^5.8.20",
     "browser-sync": "^2.9.3",
-    "conventional-changelog": "0.0.11",
+    "conventional-changelog": "^0.5.3",
     "del": "^1.1.0",
     "gulp": "^3.8.10",
     "gulp-babel": "^5.1.0",
