--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "through2": "^2.0.0",
     "vinyl": "^1.1.0",
     "vinyl-paths": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "yargs": "^2.1.1"
   },
   "aurelia": {
