--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "gulp-typedoc": "^1.2.1",
     "gulp-typedoc-extractor": "0.0.8",
     "jasmine-core": "^2.1.3",
-    "jspm": "^0.16.6",
+    "jspm": "0.16.15",
     "jspm-git": "^0.4.2",
     "karma": "^0.13.15",
     "karma-babel-preprocessor": "^5.2.1",
