--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1.1.4",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.1.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.1.1",
-      "jquery": "components/jquery@^2.2.0"
+      "jquery": "components/jquery@2.1.4"
     },
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.1.1",
@@ -48,8 +48,8 @@
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
       "core-js": "npm:core-js@^2.1.0",
-      "jquery": "components/jquery@^2.1.4",
-      "jquery.min": "components/jquery@^2.1.4",
+      "jquery": "components/jquery@2.1.4",
+      "jquery.min": "components/jquery@2.1.4",
       "polymer/mutationobservers": "^0.4.2",
       "text": "systemjs/plugin-text@^0.0.4",
       "traceur": "jmcriffey/bower-traceur@0.0.91",
