--- a/sample/package.json
+++ b/sample/package.json
@@ -16,6 +16,7 @@
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
+      "gka/chroma.js": "github:gka/chroma.js@^1.1.1",
       "google/code-prettify": "github:google/code-prettify@master",
       "jquery": "github:components/jquery@2.1.4",
       "jquery.min": "github:components/jquery@2.1.4",
