--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.1.1",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.2",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.1",
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
-      "core-js": "npm:core-js@^2.1.0",
+      "core-js": "npm:core-js@^2.1.3",
       "jquery": "components/jquery@2.1.4",
       "jquery.min": "components/jquery@2.1.4",
       "polymer/mutationobservers": "^0.4.2",
