--- a/sample/package.json
+++ b/sample/package.json
@@ -29,7 +29,8 @@
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24"
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
     }
   },
   "devDependencies": {
