fix(webpack): added main to package.json
closes https://github.com/aurelia-ui-toolkits/aurelia-kendoui-bridge/issues/428

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "MIT",
   "author": "aurelia-ui-toolkits",
+  "main": "dist/commonjs/index.js",
   "directories": {
     "lib": "dist/system"
   },
