--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "dependencies": {
       "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.3.0",
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0-beta.1.2.0",
+      "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1.2.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1.2.0",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.2.0",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.2.0",
-      "aurelia-logging": "npm:aurelia-logging@1.0.0-beta.1.2.0",
       "jquery": "components/jquery@2.1.4"
     },
     "devDependencies": {
