--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1.2.0",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.2.0",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.2.0",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
       "jquery": "components/jquery@2.1.4"
     },
     "devDependencies": {
