--- a/sample/package.json
+++ b/sample/package.json
@@ -13,6 +13,7 @@
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.0.2",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.0.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.0.2",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@0.1.20",
       "font-awesome": "npm:font-awesome@^4.5.0",
