--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "babel-dts-generator": "^0.2.17",
     "babel-eslint": "^4.1.1",
     "babel-runtime": "^5.8.20",
-    "browser-sync": "^2.9.3",
+    "browser-sync": "2.11.2",
     "conventional-changelog": "^0.5.3",
     "del": "^1.1.0",
     "glob": "^7.0.0",
