--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
       "core-js": "npm:core-js@^2.1.3",
-      "jquery": "components/jquery@2.1.4",
-      "jquery.min": "components/jquery@2.1.4",
+      "jquery": "components/jquery@^2.2.1",
+      "jquery.min": "components/jquery@^2.2.1",
       "polymer/mutationobservers": "^0.4.2",
       "text": "systemjs/plugin-text@^0.0.4",
       "traceur": "jmcriffey/bower-traceur@0.0.91",
