--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.2.0",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.2.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
-      "jquery": "components/jquery@2.1.4"
+      "jquery": "components/jquery@^2.1.4"
     },
     "devDependencies": {
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.1.1",
