--- a/sample/package.json
+++ b/sample/package.json
@@ -19,7 +19,7 @@
       "font-awesome": "npm:font-awesome@^4.5.0",
       "gka/chroma.js": "github:gka/chroma.js@^1.1.1",
       "google/code-prettify": "github:google/code-prettify@master",
-      "jquery": "github:components/jquery@^2.2.1",
+      "jquery": "npm:jquery@2.2.3",
       "jquery.min": "github:components/jquery@^2.2.1",
       "json": "github:systemjs/plugin-json@^0.1.0",
       "prism": "github:PrismJS/prism@1.3.0",
