--- a/sample/package.json
+++ b/sample/package.json
@@ -12,7 +12,8 @@
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.0.2",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.0.1",
-      "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.1.0.2",
+      "aurelia-templating": "github:aurelia/templating@1.0.0-beta.2.0.1",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@1.0.0-beta.1.2.4",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
       "css": "github:systemjs/plugin-css@0.1.20",
