--- a/package.json
+++ b/package.json
@@ -59,9 +59,18 @@
     }
   },
   "devDependencies": {
-    "aurelia-tools": "^0.1.20",
-    "babel": "^5.8.22",
-    "babel-dts-generator": "^0.2.17",
+    "aurelia-tools": "^0.2.1",
+    "babel-plugin-syntax-flow": "^6.8.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-es2015-loose-native-modules": "^1.0.0",
+    "babel-preset-stage-1": "^6.5.0",
+    "babel-dts-generator": "^0.5.1",
     "babel-eslint": "^4.1.1",
     "babel-runtime": "^5.8.20",
     "browser-sync": "2.11.2",
@@ -69,7 +78,7 @@
     "del": "^1.1.0",
     "glob": "^7.0.0",
     "gulp": "^3.8.10",
-    "gulp-babel": "^5.1.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-conventional-changelog": "^0.7.0",
@@ -79,6 +88,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-typedoc": "^1.2.1",
     "gulp-typedoc-extractor": "0.0.8",
+    "gulp-typescript": "^2.13.6",
     "jasmine-core": "^2.1.3",
     "jspm": "0.16.15",
     "jspm-git": "^0.4.2",
@@ -87,6 +97,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.2.3",
     "karma-jspm": "^2.0.2",
+    "merge2": "^1.0.2",
     "mkpath": "^1.0.0",
     "object.assign": "^1.0.3",
     "phantomjs-polyfill": "0.0.1",
@@ -94,6 +105,7 @@
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
+    "typescript": "^1.9.0-dev.20160613-1.0",
     "vinyl": "^1.1.0",
     "vinyl-paths": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
