chore(sample): added package name

--- a/sample/package.json
+++ b/sample/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "aurelia-kendoui-bridge-catalog",
   "jspm": {
     "dependencies": {
       "aurelia-binding": "npm:aurelia-binding@^1.0.0-beta.1.0.3",
