--- a/sample/package.json
+++ b/sample/package.json
@@ -34,6 +34,9 @@
     "overrides": {
       "github:twbs/bootstrap@3.3.6": {
         "dependencies": {}
+      },
+      "github:google/code-prettify@master": {
+        "main": "src/prettify"
       }
     }
   },
