--- a/sample/package.json
+++ b/sample/package.json
@@ -12,6 +12,7 @@
       "aurelia-logging": "npm:aurelia-logging@^1.0.0-beta.1",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0-beta.1",
       "aurelia-pal": "npm:aurelia-pal@^1.0.0-beta.1.0.2",
+      "aurelia-router": "npm:aurelia-router@^1.0.6",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0-beta.1.0.1",
       "aurelia-templating": "npm:aurelia-templating@^1.0.0-beta.2.0.1",
       "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.2.4",
