Declarations for better config builder usage

--- a/package.json
+++ b/package.json
@@ -128,7 +128,75 @@
         "aurelia-kendoui-bridge/common/template-gatherer",
         "aurelia-kendoui-bridge/common/template",
         "aurelia-kendoui-bridge/common/util",
-        "aurelia-kendoui-bridge/common/widget-base"
+        "aurelia-kendoui-bridge/common/widget-base",
+        "aurelia-kendoui-bridge/autocomplete/autocomplete",
+        "aurelia-kendoui-bridge/button/button",
+        "aurelia-kendoui-bridge/buttongroup/buttongroup",
+        "aurelia-kendoui-bridge/calendar/calendar",
+        "aurelia-kendoui-bridge/colorpicker/colorpicker",
+        "aurelia-kendoui-bridge/colorpalette/colorpalette",
+        "aurelia-kendoui-bridge/combobox/combobox",
+        "aurelia-kendoui-bridge/contextmenu/contextmenu",
+        "aurelia-kendoui-bridge/dialog/dialog",
+        "aurelia-kendoui-bridge/dropdownlist/dropdownlist",
+        "aurelia-kendoui-bridge/datetimepicker/datetimepicker",
+        "aurelia-kendoui-bridge/datepicker/datepicker",
+        "aurelia-kendoui-bridge/draggable/draggable",
+        "aurelia-kendoui-bridge/drop-target/drop-target",
+        "aurelia-kendoui-bridge/drop-target/drop-target-area",
+        "aurelia-kendoui-bridge/flatcolorpicker/flatcolorpicker",
+        "aurelia-kendoui-bridge/listview/listview",
+        "aurelia-kendoui-bridge/maskedtextbox/maskedtextbox",
+        "aurelia-kendoui-bridge/menu/menu",
+        "aurelia-kendoui-bridge/multiselect/multiselect",
+        "aurelia-kendoui-bridge/notification/notification",
+        "aurelia-kendoui-bridge/notification/notification-template",
+        "aurelia-kendoui-bridge/numerictextbox/numerictextbox",
+        "aurelia-kendoui-bridge/panelbar/panelbar",
+        "aurelia-kendoui-bridge/popup/popup",
+        "aurelia-kendoui-bridge/progressbar/progressbar",
+        "aurelia-kendoui-bridge/rangeslider/rangeslider",
+        "aurelia-kendoui-bridge/responsivepanel/responsivepanel",
+        "aurelia-kendoui-bridge/scrollview/scrollview",
+        "aurelia-kendoui-bridge/sortable/sortable",
+        "aurelia-kendoui-bridge/slider/slider",
+        "aurelia-kendoui-bridge/splitter/splitter",
+        "aurelia-kendoui-bridge/switch/switch",
+        "aurelia-kendoui-bridge/tabstrip/tabstrip",
+        "aurelia-kendoui-bridge/template/template",
+        "aurelia-kendoui-bridge/timepicker/timepicker",
+        "aurelia-kendoui-bridge/toolbar/toolbar",
+        "aurelia-kendoui-bridge/toolbar/toolbar-item",
+        "aurelia-kendoui-bridge/toolbar/toolbar-item-button",
+        "aurelia-kendoui-bridge/tooltip/tooltip",
+        "aurelia-kendoui-bridge/validator/validator",
+        "aurelia-kendoui-bridge/window/window",
+        "aurelia-kendoui-bridge/valueconverters/valueconverters",
+        "aurelia-kendoui-bridge/barcode/barcode",
+        "aurelia-kendoui-bridge/chart/chart",
+        "aurelia-kendoui-bridge/chart/sparkline",
+        "aurelia-kendoui-bridge/chart/stock",
+        "aurelia-kendoui-bridge/chart/treemap",
+        "aurelia-kendoui-bridge/diagram/diagram",
+        "aurelia-kendoui-bridge/editor/editor",
+        "aurelia-kendoui-bridge/filter-menu/filter-menu",
+        "aurelia-kendoui-bridge/gantt/gantt",
+        "aurelia-kendoui-bridge/gantt/gantt-col",
+        "aurelia-kendoui-bridge/grid/grid",
+        "aurelia-kendoui-bridge/grid/col",
+        "aurelia-kendoui-bridge/grid/grid-toolbar",
+        "aurelia-kendoui-bridge/grid/grid-command",
+        "aurelia-kendoui-bridge/map/map",
+        "aurelia-kendoui-bridge/gauges/linear-gauge",
+        "aurelia-kendoui-bridge/pivotgrid/pivotgrid",
+        "aurelia-kendoui-bridge/pivotgrid/pivotconfigurator",
+        "aurelia-kendoui-bridge/qrcode/qrcode",
+        "aurelia-kendoui-bridge/gauges/radial-gauge",
+        "aurelia-kendoui-bridge/scheduler/scheduler",
+        "aurelia-kendoui-bridge/treelist/treelist",
+        "aurelia-kendoui-bridge/treelist/tree-col",
+        "aurelia-kendoui-bridge/treeview/treeview",
+        "aurelia-kendoui-bridge/upload/upload"
       ]
     },
     "documentation": {
