--- a/package.json
+++ b/package.json
@@ -40,15 +40,16 @@
       "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0",
       "aurelia-logging": "npm:aurelia-logging@^1.0.0",
       "aurelia-metadata": "npm:aurelia-metadata@^1.0.0",
+      "aurelia-pal": "npm:aurelia-pal@^1.3.0",
       "aurelia-router": "npm:aurelia-router@^1.0.2",
       "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0",
       "aurelia-templating": "npm:aurelia-templating@^1.1.0",
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0"
     },
     "devDependencies": {
-      "aurelia-pal": "npm:aurelia-pal@^1.0.0",
+      "aurelia-pal": "npm:aurelia-pal@^1.3.0",
       "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0",
-      "aurelia-polyfills": "npm:aurelia-polyfills@^1.1.1",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.2.1",
       "aurelia-testing": "npm:aurelia-testing@^0.4.0",
       "babel": "npm:babel-core@^5.8.22",
       "babel-runtime": "npm:babel-runtime@^5.8.20",
@@ -58,6 +59,17 @@
       "traceur": "jmcriffey/bower-traceur@0.0.91",
       "traceur-runtime": "jmcriffey/bower-traceur-runtime@0.0.91"
     }
+  },
+  "dependencies": {
+    "aurelia-binding": "npm:aurelia-binding@^1.0.4",
+    "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0",
+    "aurelia-logging": "npm:aurelia-logging@^1.0.0",
+    "aurelia-metadata": "npm:aurelia-metadata@^1.0.0",
+    "aurelia-pal": "npm:aurelia-pal@^1.3.0",
+    "aurelia-router": "npm:aurelia-router@^1.0.2",
+    "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0",
+    "aurelia-templating": "npm:aurelia-templating@^1.1.0",
+    "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.2.1",
