--- a/sample/package.json
+++ b/sample/package.json
@@ -19,7 +19,7 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.1",
       "bootstrap": "github:twbs/bootstrap@3.3.6",
       "css": "github:systemjs/plugin-css@^0.1.23",
-      "font-awesome": "npm:font-awesome@^4.5.0",
+      "font-awesome": "npm:font-awesome@4.6.3",
       "gka/chroma.js": "github:gka/chroma.js@^1.1.1",
       "google/code-prettify": "github:google/code-prettify@master",
       "json": "github:systemjs/plugin-json@^0.1.0",
