--- a/package.json
+++ b/package.json
@@ -61,15 +61,15 @@
     }
   },
   "dependencies": {
-    "aurelia-binding": "npm:aurelia-binding@^1.0.4",
-    "aurelia-dependency-injection": "npm:aurelia-dependency-injection@^1.0.0",
-    "aurelia-logging": "npm:aurelia-logging@^1.0.0",
-    "aurelia-metadata": "npm:aurelia-metadata@^1.0.0",
-    "aurelia-pal": "npm:aurelia-pal@^1.3.0",
-    "aurelia-router": "npm:aurelia-router@^1.0.2",
-    "aurelia-task-queue": "npm:aurelia-task-queue@^1.0.0",
-    "aurelia-templating": "npm:aurelia-templating@^1.1.0",
-    "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0"
+    "aurelia-binding": "^1.0.4",
+    "aurelia-dependency-injection": "^1.0.0",
+    "aurelia-logging": "^1.0.0",
+    "aurelia-metadata": "^1.0.0",
+    "aurelia-pal": "^1.3.0",
+    "aurelia-router": "^1.0.2",
+    "aurelia-task-queue": "^1.0.0",
+    "aurelia-templating": "^1.1.0",
+    "aurelia-templating-resources": "^1.0.0"
   },
   "devDependencies": {
     "aurelia-tools": "^0.2.1",
