--- a/package.json
+++ b/package.json
@@ -78,14 +78,14 @@
     "babel-plugin-syntax-flow": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-amd": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.9.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.11.5",
+    "babel-plugin-transform-es2015-modules-systemjs": "^6.11.6",
     "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-es2015-loose": "^7.0.0",
     "babel-preset-es2015-loose-native-modules": "^1.0.0",
     "babel-preset-stage-1": "^6.5.0",
-    "babel-runtime": "^6.23.0",
+    "babel-runtime": "^5.8.24",
     "browser-sync": "2.18.12",
     "conventional-changelog": "^1.1.3",
     "del": "^3.0.0",
@@ -99,8 +99,8 @@
     "gulp-ignore": "^2.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-rename": "^1.2.2",
-    "gulp-typedoc": "^2.0.2",
-    "gulp-typedoc-extractor": "0.0.8",
+    "gulp-typedoc": "^2.0.0",
+    "gulp-typedoc-extractor": "^0.0.8",
     "gulp-typescript": "^3.1.7",
     "jasmine-core": "^2.1.3",
     "jspm": "0.16.53",
@@ -118,7 +118,7 @@
     "require-dir": "^0.3.2",
     "run-sequence": "^1.0.2",
     "through2": "^2.0.0",
-    "typedoc": "^0.7.1",
+    "typedoc": "^0.4.4",
     "typescript": "^2.4.1",
     "vinyl": "^2.0.2",
     "vinyl-paths": "^2.1.0",
