chore(all): update package.json to include new components for au webpack plugin

--- a/package.json
+++ b/package.json
@@ -147,12 +147,14 @@
         "aurelia-kendoui-bridge/button/button",
         "aurelia-kendoui-bridge/buttongroup/buttongroup",
         "aurelia-kendoui-bridge/calendar/calendar",
+		"aurelia-kendoui-bridge/chat/chat",
         "aurelia-kendoui-bridge/colorpicker/colorpicker",
         "aurelia-kendoui-bridge/colorpalette/colorpalette",
         "aurelia-kendoui-bridge/combobox/combobox",
         "aurelia-kendoui-bridge/contextmenu/contextmenu",
         "aurelia-kendoui-bridge/dialog/dialog",
         "aurelia-kendoui-bridge/dropdownlist/dropdownlist",
+		"aurelia-kendoui-bridge/dropdowntree/dropdowntree",
         "aurelia-kendoui-bridge/datetimepicker/datetimepicker",
         "aurelia-kendoui-bridge/datepicker/datepicker",
         "aurelia-kendoui-bridge/draggable/draggable",
@@ -166,6 +168,7 @@
         "aurelia-kendoui-bridge/notification/notification",
         "aurelia-kendoui-bridge/notification/notification-template",
         "aurelia-kendoui-bridge/numerictextbox/numerictextbox",
+		"aurelia-kendoui-bridge/pager/pager",
         "aurelia-kendoui-bridge/panelbar/panelbar",
         "aurelia-kendoui-bridge/popup/popup",
         "aurelia-kendoui-bridge/progressbar/progressbar",
